--- a/angular-frontend/src/app/components/login/login.component.html
+++ b/angular-frontend/src/app/components/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<div class="container">
+    <h1 class="mat-h1">Login</h1>
+    <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        
+        <mat-form-field appearance="standard">
+            <mat-label>Email</mat-label>
+            <input type="email" matInput formControlName="email">
+        </mat-form-field>
+        
+        <mat-form-field appearance="standard">
+            <mat-label>Password</mat-label>
+            <input type="password" matInput formControlName="password">
+        </mat-form-field>
+        
+        <button type="submit" mat-raised-button color="primary">Login</button>
+    </form>
+</div>
