--- a/angular-frontend/src/app/components/nav/nav.component.html
+++ b/angular-frontend/src/app/components/nav/nav.component.html
@@ -8,10 +8,9 @@
       <a mat-list-item routerLink="/home">Home</a>
       <a mat-list-item routerLink="/recipes">Recipes</a>
       <a mat-list-item routerLink="/favourites">Favourites</a>
-      <mat-divider></mat-divider>
-      <a mat-list-item routerLink="#">Registration</a>
-      <a mat-list-item routerLink="#">Login</a>
-      <a mat-list-item routerLink="#">Logout</a>
+      <a mat-list-item routerLink="/registration">Registration</a>
+      <a mat-list-item routerLink="/login">Login</a>
+      <a mat-list-item (click)="logout()">Logout</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
