--- a/angular-frontend/src/app/components/registration/registration.component.html
+++ b/angular-frontend/src/app/components/registration/registration.component.html
@@ -1,1 +1,25 @@
-<p>registration works!</p>
+<div class="container">
+    <h1 class="mat-h1">Registration</h1>
+    <form class="register-form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <mat-form-field appearance="standard">
+            <mat-label>Name</mat-label>
+            <input type="text" matInput formControlName="name">
+        </mat-form-field>
+        
+        <mat-form-field appearance="standard">
+            <mat-label>Email</mat-label>
+            <input type="email" matInput formControlName="email">
+        </mat-form-field>
+        
+        <mat-form-field appearance="standard">
+            <mat-label>Password</mat-label>
+            <input type="password" matInput formControlName="password">
+        </mat-form-field>
+
+        <mat-form-field appearance="standard">
+            <mat-label>Confirm Password</mat-label>
+            <input type="password" matInput formControlName="password_confirmation">
+        </mat-form-field>
+        <button type="submit" mat-raised-button color="primary">Register</button>
+    </form>
+</div>
