--- a/angular-frontend/src/app/components/user-recipe-lists/components/read-all-lists/read-all-lists.component.html
+++ b/angular-frontend/src/app/components/user-recipe-lists/components/read-all-lists/read-all-lists.component.html
@@ -2,9 +2,9 @@
   <h1>My Lists</h1>
   <div *ngFor="let item of list">
     <mat-card class="recipe-list">
-      <span>{{ item.title }}</span>
+      <span>{{ item.title }}</span><span>{{ item.id }}</span>
       <div class="card-right">
-        <button mat-mini-fab color="warn" aria-label="Example icon button with a delete icon">
+        <button (click)="deleteId(item.id)" mat-mini-fab color="warn" aria-label="Delete icon">
           <mat-icon>delete</mat-icon>
         </button>
       </div>
