--- a/angular-frontend/src/app/components/recipes/components/recipe-list/recipe-list.component.html
+++ b/angular-frontend/src/app/components/recipes/components/recipe-list/recipe-list.component.html
@@ -10,7 +10,7 @@
         <img mat-card-image src="{{ recipe.image }}">
       </a>
       <mat-card-actions>
-        <button (click)="addToFavourites(recipe)"  mat-mini-fab class="more-button" aria-label="add to favourites">
+        <button (click)="addToFavourites(recipe)"  mat-mini-fab class="fav-button" aria-label="add to favourites">
           <mat-icon>favorite</mat-icon>
         </button>
       </mat-card-actions>
