--- a/angular-frontend/src/app/components/nav/nav.component.html
+++ b/angular-frontend/src/app/components/nav/nav.component.html
@@ -5,14 +5,14 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/home">Home</a>
-      <a mat-list-item routerLink="/recipes">Recipes</a>
-      <a mat-list-item routerLink="/favourites">Favourites</a>
+      <a mat-list-item routerLink="home">Home</a>
+      <a mat-list-item routerLink="recipes">Recipes</a>
+      <a mat-list-item routerLink="favourites">Favourites</a>
       <mat-divider></mat-divider>
-      <a mat-list-item routerLink="user-recipe-lists">My Lists</a>
+      <a mat-list-item routerLink="my-lists">My Lists</a>
       <mat-divider></mat-divider>
-      <a mat-list-item routerLink="/registration">Registration</a>
-      <a mat-list-item routerLink="/login">Login</a>
+      <a mat-list-item routerLink="registration">Registration</a>
+      <a mat-list-item routerLink="login">Login</a>
       <a mat-list-item (click)="logout()">Logout</a>
     </mat-nav-list>
   </mat-sidenav>
