--- a/angular-frontend/src/app/components/user-recipe-lists/components/read-all-lists/read-all-lists.component.html
+++ b/angular-frontend/src/app/components/user-recipe-lists/components/read-all-lists/read-all-lists.component.html
@@ -1,8 +1,11 @@
 <div fxLayout="column">
   <h1>My Lists</h1>
   <div *ngFor="let item of list">
-    <mat-card class="recipe-list">
-      <span>{{ item.title }}</span><span>{{ item.id }}</span>
+    <mat-card class="recipe-list" >
+      <a routerLink="/my-lists/{{ item.id }}">
+        <span>{{ item.title }}</span>
+      </a>
+      <span>{{ item.id }}</span>
       <div class="card-right">
         <button (click)="deleteId(item.id)" mat-mini-fab color="warn" aria-label="Delete icon">
           <mat-icon>delete</mat-icon>
