--- a/angular-frontend/src/app/components/recipes/components/recipe-list/recipe-list.component.html
+++ b/angular-frontend/src/app/components/recipes/components/recipe-list/recipe-list.component.html
@@ -10,6 +10,7 @@
         <img mat-card-image src="{{ recipe.image }}">
       </a>
       <mat-card-actions>
+        <app-save-to-list *ngIf="(recipe)" [recipe]="recipe" class="save-button"></app-save-to-list>
         <button (click)="addToFavourites(recipe)"  mat-mini-fab class="fav-button" aria-label="add to favourites">
           <mat-icon>favorite</mat-icon>
         </button>
