--- a/angular-frontend/src/app/components/user-recipe-lists/components/create-list/create-list.component.html
+++ b/angular-frontend/src/app/components/user-recipe-lists/components/create-list/create-list.component.html
@@ -3,7 +3,7 @@
     <form class="createListForm" [formGroup]="createListForm" (ngSubmit)="onSubmit()">
         
         <mat-form-field appearance="standard">
-            <mat-label>Name</mat-label>
+            <mat-label>Title</mat-label>
             <input type="text" matInput formControlName="title">
         </mat-form-field>
         
