--- a/angular-frontend/src/app/components/user-recipe-lists/components/read-all-lists/read-all-lists.component.html
+++ b/angular-frontend/src/app/components/user-recipe-lists/components/read-all-lists/read-all-lists.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column">
+<div class="container" fxLayout="column">
   <h1>My Lists</h1>
   <div *ngFor="let item of list">
     <mat-card class="recipe-list" >
